# gh-runner

./: CPU.Dockerfile  GPU.Dockerfile  PythonBase.Dockerfile  add_insecure.sh  docker-compose.yml  runner_script.sh
.github/workflows/: deploy-python-base.yml  deploy-runner.yml  deploy.yml  runner-test.yml
scripts/: add_insecure.sh  runner_script.sh
test-python/: Dockerfile  pyproject.toml
test-python/src/: __init__.py
test-python/tests/: test_hello.py
