[tool.poetry]
name = "test-python"
version = "0.1.0"
description = ""
authors = ["medaka <36759068+medaka0213@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "1.10.11"
guppy-utils = { git = "https://github.com/medaka0213/Guppy-Utils.git", rev = "main" }
click = "^8.1.7"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.0"
httpx = "^0.26.0"
pyproject-flake8 = "^6.1.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
